fix spacing issue caused by changed class name

--- a/src/component-library/components/ServiceCards/ServiceCards.module.scss
+++ b/src/component-library/components/ServiceCards/ServiceCards.module.scss
@@ -77,7 +77,7 @@
   padding-top: $spacing-2;
 }
 
-.body-copy {
+.body-text {
   padding-top: px-to-rem(24);
 }
 
